--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@emotion/react": "^11.7.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
     "@popperjs/core": "^2.11.2",
@@ -55,6 +57,7 @@
     "babel-eslint": "^10.1.0",
     "clsx": "^1.1.1",
     "mdi-material-ui": "^7.1.0",
+    "moment": "^2.30.1",
     "next": "12.0.4",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
