--- a/package.json
+++ b/package.json
@@ -51,11 +51,14 @@
     "@mdi/react": "^1.6.1",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
+    "@mui/utils": "^5.15.11",
+    "@mui/x-date-pickers": "^6.19.4",
     "@popperjs/core": "^2.11.2",
     "apexcharts-clevision": "3.28.5",
     "axios": "^1.6.7",
     "babel-eslint": "^10.1.0",
     "clsx": "^1.1.1",
+    "dayjs": "^1.11.10",
     "mdi-material-ui": "^7.1.0",
     "moment": "^2.30.1",
     "next": "12.0.4",
