--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
     "@mui/utils": "^5.15.11",
-    "@mui/x-date-pickers": "^6.19.4",
+    "@mui/x-date-pickers": "^6.19.5",
     "@popperjs/core": "^2.11.2",
     "apexcharts-clevision": "3.28.5",
     "axios": "^1.6.7",
@@ -66,7 +66,7 @@
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-datepicker": "^4.5.0",
-    "react-dom": "17.0.2",
+    "react-datetime": "^3.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.2.5",
     "react-toastify": "^10.0.4"
