change password design set

--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "react-datepicker": "^4.5.0",
     "react-datetime": "^3.2.0",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-popper": "^2.2.5",
-    "react-toastify": "^10.0.4"
+    "react-popper": "^2.2.5"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
